--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-numpy==2.2.4
-pandas==2.2.3
-scikit-learn==1.6.1
-streamlit==1.9.2
-matplotlib==3.9.4
-seaborn==0.9.1
+numpy
+pandas
+scikit-learn==1.3.2
+streamlit
+matplotlib
+seaborn
 
